fix resources :articles

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -24,3 +24,7 @@ p
   = @article.updated_at
 
 = link_to 'Back', articles_path
+| &nbsp;
+| |
+| &nbsp;
+= link_to 'Edit', edit_article_path(@article)
