--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,5 +1,8 @@
 h1 Listing articles
 
+p
+  = link_to 'New article', new_article_path
+
 table
   tr
     th ID
@@ -7,18 +10,22 @@ table
     th Text
     th Created At
     th Updated At
+    th
+    th
 
   - @articles.each do |article|
     tr
       td
-        = link_to article.id, article_path(article)
+        = article.id
       td
-        = article.title
+        = link_to article.title, article_path(article)
       td
         = article.text
       td
         = article.created_at
       td
         = article.updated_at
-
-= link_to 'New article', new_article_path
+      td
+        = link_to 'Edit', edit_article_path(article)
+      td
+        = link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' }
