--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -1,15 +1,10 @@
 h1 New Article
 
 = form_for :article, url: articles_path do |f|
-  p
-    = f.label :title
-    br
-    = f.text_field :title
 
-  p
-    = f.label :text
-    br
-    = f.text_area :text
+  = render partial: 'errors', locals: { errors: @article&.errors }
+
+  = render partial: 'form_input', locals: { f: f }
 
   p
     = f.submit
