single quote -> double quote

--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -2,14 +2,14 @@ h1 Editing article
 
 = form_for :article, url: article_path(@article), method: :patch do |f|
 
-  = render partial: 'errors', locals: { errors: @article&.errors }
+  = render partial: "errors", locals: { errors: @article&.errors }
 
   p
     strong ID:
     | &nbsp;
     = @article.id
 
-  = render partial: 'form_input', locals: { f: f }
+  = render partial: "form_input", locals: { f: f }
 
   p
     strong Created At:
@@ -24,4 +24,4 @@ h1 Editing article
   p
     = f.submit
 
-= link_to 'Back', articles_path
+= link_to "Back", articles_path
