--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -7,4 +7,4 @@ p
   | &nbsp;
   = comment.body
 p
-  = link_to 'Destroy Comment', [comment.article, comment], method: :delete, data: { confirm: 'Are you sure?' }
+  = link_to "Destroy Comment", [comment.article, comment], method: :delete, data: { confirm: "Are you sure?" }
