--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -2,11 +2,11 @@ h1 New Article
 
 = form_for :article, url: articles_path do |f|
 
-  = render partial: 'errors', locals: { errors: @article&.errors }
+  = render partial: "errors", locals: { errors: @article&.errors }
 
-  = render partial: 'form_input', locals: { f: f }
+  = render partial: "form_input", locals: { f: f }
 
   p
     = f.submit
 
-= link_to 'Back', articles_path
+= link_to "Back", articles_path
