--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -30,8 +30,8 @@ h2 Comments
 h2 Add a comment:
 = render "comments/form"
 
-= link_to 'Back', articles_path
+= link_to "Back", articles_path
 | &nbsp;
 | |
 | &nbsp;
-= link_to 'Edit', edit_article_path(@article)
+= link_to "Edit", edit_article_path(@article)
