--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -14,6 +14,11 @@ p
   = @article.text
 
 p
+  strong Publish At:
+  | &nbsp;
+  = @article.published_at
+
+p
   strong Created At:
   | &nbsp;
   = @article.created_at
