--- a/app/views/articles/_form_input.html.slim
+++ b/app/views/articles/_form_input.html.slim
@@ -7,3 +7,8 @@ p
   = f.label :text
   br
   = f.text_area :text
+
+p
+  = f.label :published_at
+  br
+  = f.text_field :published_at, value: article&.published_at || Time.zone.now
