--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,11 +1,13 @@
-= form_for([@article, @article.comments.build]) do |f|
-  p
-    = f.label :commenter
-    br
-    = f.text_field :commenter
-  p
-    = f.label :body
-    br
-    = f.text_area :body
-  p
-    = f.submit
+#comment_form
+  = form_for([@article, @article.comments.build]) do |f|
+    = f.hidden_field :replied_comment_id, value: params[:replied_comment_id]
+    p
+      = f.label :commenter
+      br
+      = f.text_field :commenter
+    p
+      = f.label :body
+      br
+      = f.text_area :body
+    p
+      = f.submit
