--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,5 +1,8 @@
 #comment_form
   = form_for([@article, @article.comments.build]) do |f|
+
+    = render partial: "common/errors", locals: { errors: @article&.errors }
+
     = f.hidden_field :replied_comment_id, value: params[:replied_comment_id]
     p
       = f.label :commenter
